--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^24.7.1",
+    "@types/react": "^19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "typescript": "^5.9.3"
