--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^24.7.1",
     "@types/react": "^19.2.2",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "@types/react-dom": "^19.2.1",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
     "typescript": "^5.9.3"
   }
 }
