--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "eslintConfig": {
+    "extends": [
+      "wesbos"
+    ]
+  },
   "dependencies": {
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
@@ -21,8 +26,10 @@
     "@types/node": "^24.7.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
-    "eslint": "^9.37.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^15.5.4",
+    "eslint-config-wesbos": "^4.3.2",
+    "prettier": "^3.8.1",
     "typescript": "^5.9.3"
   }
 }
